[gd_scene load_steps=3 format=3 uid="uid://dpp7ee7wmjjw5"]

[ext_resource type="Script" path="res://src/ui/furniture_shop/furniture_shop_ui.gd" id="1_2eugo"]
[ext_resource type="PackedScene" uid="uid://s21dn7ti8wy6" path="res://src/ui/furniture_shop/FurnitureButtonUI.tscn" id="2_g7ig4"]

[node name="FurnitureShopUI" type="Control"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_2eugo")
furniture_button_scene = ExtResource("2_g7ig4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 8

[node name="FurnitureButtons" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = -8

[connection signal="child_entered_tree" from="MarginContainer/FurnitureButtons" to="." method="_on_furniture_buttons_child_entered_tree"]
[connection signal="child_exiting_tree" from="MarginContainer/FurnitureButtons" to="." method="_on_furniture_buttons_child_exiting_tree"]
